PUBDEV-5976 - Support for unified logging (#2935)
* Removed deprecated GC printing flags from H2O.init(). Mentioned flags deprecation in troubleshooting and welcome.rst. Ignoring these outdated flags in H2Odriver.java

* Finished a sentence in general-troubleshooting documentation about different GC flags.

* Removed 'Java' word mentioned twice in general-troubleshooting

* Custom JVM args support for h2o.init() in Python API

* Added optional custom JVM arguments to R API

* Moved unified logging detection to JavaVersionUtils

* Removed custom args checking for both R and Python

* Separated arguments in Hadoop documentation - JVM arguments have separate section

* Error thrown when bad GC flag is provided to h2odriver in combination with wrong JVM version.