@@ -17,7 +17,6 @@ import water.JettyProxy;
 import water.ProxyStarter;
 import water.network.SecurityUtils;
 import water.util.ArrayUtils;
-import water.util.JavaVersionUtils;
 import water.util.StringUtils;
 
 import static water.util.JavaVersionUtils.JAVA_VERSION;
@@ -606,6 +605,8 @@ public class h2odriver extends Configured implements Tool {
                     "          [-ea]\n" +
                     "          [-verbose:gc]\n" +
                     "          [-XX:+PrintGCDetails]\n" +
+                    "          [-XX:+PrintGCTimeStamps]\n" +
+                    "          [-Xlog:gc=info]\n" +
                     "          [-license <license file name (local filesystem, not hdfs)>]\n" +
                     "          [-o | -output <hdfs output dir>]\n" +
                     "\n" +
@@ -639,6 +640,9 @@ public class h2odriver extends Configured implements Tool {
                     "             The file contains one line with the IP and port of the embedded\n" +
                     "             web server for one of the H2O nodes in the cluster.  e.g.\n" +
                     "                 192.168.1.100:54321\n" +
+                    "          o  Flags [-verbose:gc], [-XX:+PrintGCDetails] and [-XX:+PrintGCTimeStamps]" +
+                    "             are deperacated in Java 9 and removed in Java 10." +
+                    "             The option [-Xlog:gc=info] replaces these flags since Java 9." +
                     "          o  All mappers must start before the H2O cloud is considered up.\n" +
                     "\n" +
                     "Examples:\n" +
@@ -863,8 +867,18 @@ public class h2odriver extends Configured implements Tool {
       else if (s.equals("-ea")) {
         enableExceptions = true;
       }
-      else if (s.equals("-verbose:gc")) {
-        enableVerboseGC = true;
+      else if (s.equals("-verbose:gc") && !JAVA_VERSION.useUnifiedLogging()) {
+        if (!JAVA_VERSION.useUnifiedLogging()) {
+          enableVerboseGC = true;
+        } else {
+          error("Parameter -verbose:gc is unusable, running on JVM with deprecated GC debugging flags.");
+        }
+      } else if (s.equals("-Xlog:gc=info")) {
+        if (JAVA_VERSION.useUnifiedLogging()) {
+          enableVerboseGC = true;
+        } else {
+          error("Parameter -verbose:gc is unusable, running on JVM without unified JVM logging.");
+        }
       }
       else if (s.equals("-verbose:class")) {
         enableVerboseClass = true;
@@ -890,12 +904,19 @@ public class h2odriver extends Configured implements Tool {
         if ((debugPort < 0) || (debugPort > 65535)) {
           error("Debug port must be between 1 and 65535");
         }
-      }
-      else if (s.equals("-XX:+PrintGCDetails")) {
-        enablePrintGCDetails = true;
+      } else if (s.equals("-XX:+PrintGCDetails")) {
+        if (!JAVA_VERSION.useUnifiedLogging()) {
+          enablePrintGCDetails = true;
+        } else {
+          error("Parameter -XX:+PrintGCDetails is unusable, running on JVM with deprecated GC debugging flags.");
+        }
       }
       else if (s.equals("-XX:+PrintGCTimeStamps")) {
-        enablePrintGCTimeStamps = true;
+        if (!JAVA_VERSION.useUnifiedLogging()) {
+          enablePrintGCDetails = true;
+        } else {
+          error("Parameter -XX:+PrintGCTimeStamps is unusable, running on JVM with deprecated GC debugging flags.");
+        }
       }
       else if (s.equals("-gc")) {
         enableVerboseGC = true;
@@ -1412,7 +1433,8 @@ public class h2odriver extends Configured implements Tool {
               .append(" -Xmx").append(mapperXmx)
               .append(((mapperPermSize != null) && (mapperPermSize.length() > 0)) ? (" -XX:PermSize=" + mapperPermSize) : "")
               .append((enableExceptions ? " -ea" : ""))
-              .append((enableVerboseGC ? " -verbose:gc" : ""))
+              .append((enableVerboseGC && !JAVA_VERSION.useUnifiedLogging() ? " -verbose:gc" : ""))
+              .append(enableVerboseGC && JAVA_VERSION.useUnifiedLogging() ? "-Xlog:gc=info" : "")
               .append((enablePrintGCDetails ? " -XX:+PrintGCDetails" : ""))
               .append((enablePrintGCTimeStamps ? " -XX:+PrintGCTimeStamps" : ""))
               .append((enableVerboseClass ? " -verbose:class" : ""))
